--- a/UndeNeDam/app/src/main/res/layout/fragment_fragment_poze_rute_vreme_partii.xml
+++ b/UndeNeDam/app/src/main/res/layout/fragment_fragment_poze_rute_vreme_partii.xml
@@ -18,7 +18,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />
 </RelativeLayout>
