--- a/UndeNeDam/app/src/main/res/layout/fragment_fragment_poze_rute_vreme_partii.xml
+++ b/UndeNeDam/app/src/main/res/layout/fragment_fragment_poze_rute_vreme_partii.xml
@@ -21,4 +21,66 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />
+
+    <TextView
+        android:id="@+id/city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="10dp"
+        android:text="1" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/city"
+        android:layout_alignStart="@+id/city"
+        android:layout_below="@+id/city"
+        android:layout_marginTop="13dp"
+        android:text="2"/>
+
+    <TextView
+        android:id="@+id/temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/description"
+        android:layout_alignStart="@+id/description"
+        android:layout_below="@+id/description"
+        android:layout_marginTop="15dp"
+        android:text="3"/>
+
+    <TextView
+        android:id="@+id/umiditate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/temperature"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/temperature"
+        android:layout_marginBottom="71dp"
+        android:text="4"/>
+
+    <TextView
+        android:id="@+id/presiune"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/umiditate"
+        android:layout_alignStart="@+id/umiditate"
+        android:layout_alignTop="@+id/umiditate"
+        android:layout_marginTop="28dp"
+        android:text="5"/>
+
+    <TextView
+        android:id="@+id/update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/presiune"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/presiune"
+        android:layout_marginBottom="11dp"
+        android:text="6"/>
 </RelativeLayout>
